--- a/Tab Saver/index.css
+++ b/Tab Saver/index.css
@@ -2,5 +2,44 @@ body {
   margin: 0;
   padding: 10px;
   font-family: Arial, Helvetica, sans-serif;
+  min-width: 400px;
 }
 
+input {
+  width: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+  border-color: #5f9341;
+  border-width: 3px;
+  border-style: solid;
+}
+
+button {
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border: none;
+  color: #ffffff;
+  background-color: #5f9341;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+ul {
+  margin-top: 20px;
+  list-style: none;
+  padding-left: 0;
+}
+
+li {
+  margin-top: 5px;
+}
+
+li a {
+  color: #5f9341;
+}
