--- a/Tab Saver/index.css
+++ b/Tab Saver/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 10px;
   font-family: Arial, Helvetica, sans-serif;
-  min-width: 400px;
+  min-width: 500px;
 }
 
 input {
@@ -18,14 +18,29 @@ input {
   border-style: solid;
 }
 
-button {
+#input-btn,
+#tab-btn {
+  width: 33%;
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 15px;
   padding-bottom: 15px;
-  border: none;
+  border: 1px solid #5f9341;
   color: #ffffff;
   background-color: #5f9341;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+#delete-btn {
+  width: 33%;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border: 1px solid #5f9341;
+  color: #5f9341;
+  background-color: #ffffff;
   font-weight: bold;
   font-size: 20px;
 }
